<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@android:string/no"
        android:text="@string/lbl_telefono"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_titulo"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="381dp"
        android:layout_height="70dp"
        android:background="@drawable/bordes"
        android:ems="10"
        android:inputType="textPersonName|phone"
        android:text="@string/txt_telefono"
        android:textColor="#3C3F41"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <TextView
        android:id="@+id/lbl_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@android:string/no"
        android:text="@string/lbl_fecha"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <EditText
        android:id="@+id/txt_fecha"
        android:layout_width="381dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bordes"
        android:ems="10"
        android:inputType="date"
        android:text="@string/txt_fecha"
        android:textColor="#3C3F41"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

    <TextView
        android:id="@+id/lbl_genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@android:string/no"
        android:text="@string/lbl_genero"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <RadioGroup
        android:id="@+id/rdbtGenero"
        android:layout_width="354dp"
        android:layout_height="52dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406">

        <RadioButton
            android:id="@+id/rdb_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:checked="true"
            android:text="@string/rdbt_masculino"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.776" />

        <RadioButton
            android:id="@+id/rdb_femenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbt_femenino"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.791"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.776" />

    </RadioGroup>

    <TextView
        android:id="@+id/lbl_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nombre"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />


    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="381dp"
        android:layout_height="70dp"
        android:background="@drawable/bordes"

        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_nombre"
        android:textColor="#3C3F41"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="228dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="btn_enviar"
        android:text="@string/btn_enviar"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />
</androidx.constraintlayout.widget.ConstraintLayout>